compile under JDK 17